# ot

./: .gitignore  alembic.ini  error_log  fake_data.py  gunicorn_conf.py  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_11_15_1149-3b4de2981cfb_initial.py  2023_11_15_1201-ed5b86141fe9_change_data_options.py  2023_11_17_1502-c0e02236f666_пришлось_с_начала_алембик_.py  2023_11_17_1621-6c57dd6f2dcf_added_rows_in_exam_table.py  2023_11_17_1622-c1eb15da3af3_added_rows_in_exam_table_x2.py  2023_11_24_1050-7fda653e41e3_added_user_table.py  2024_01_28_1746-c307b531fd6a_initial.py  2024_01_30_1753-641a121dd66e_cascade_del.py
core/: CustomExceptions.py  UserManager.py  config.py  database.py
core/api/: employee.py
core/api/routers/: divisions.py  employee.py  exam_types.py  exams.py  file.py  positions.py  subdivision.py
core/api/schemas/: certificate.py  division.py  employee.py  exam_types.py  exams.py  position.py  subdivision.py
core/api/tools/: certificates_tool.py  dependencies.py  division_tools.py  employee_tools.py  exam_tools.py  exam_type_tools.py  position_tools.py  subdivision_tools.py
core/models/: User.py  __init__.py  database.py  employee.py  exam.py
static/: employees-settings.html  exams-settings.html  index.html  subdivisions-settings.html
static/css/: style.css
static/js/bootstrap_js/: Lolkek.js
static/templates/: base.html  employees_list.html  exam_table.html  filter_by_division.html  index.html  navbar.html  positions-settings.html  subdivisions-settings.html
